2007-08-03  Andreas Kupries  <andreask@activestate.com>

	* filetype.test: Split the overly large file fileutil.test
	* fileutil.test: into a series of smaller test files for
	* find.test: specific commands.
	* inplace.test:
	* pathops.test:
	* strip.test:
	* test.test:

2007-08-01  Andreas Kupries  <andreask@activestate.com>

	* fileutil.test: Fixed problems with the tests for
	  fileutil::writeFile and companions. The regsub did not like
	  paths containing special characters like '+'. Replaced with a
	  'string map' construction.

	* multiop.tcl: Language tweak. Allow 'from', and 'into' (and aliases)
	* multiop.man: as qualifiers to 'the', i.e. allow specification after
	* multiop.test: 'the'. Updates documentation and examples too.

	* multi.tcl: Added documentation and testsuite for the multiop
	* multi.man: package built on top of the multiop objects. Bug
	* multi.test: fixes.
	* multiop.tcl:
	* multiop.man:
	* multiop.test:

2007-07-31  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multiop.man: Wrote the actual documentation for the core
	* multiop.tcl: multi-file objects. Tweaked the syntax a bit.

2007-07-31  Andreas Kupries  <andreask@activestate.com>

	* multiop.tcl: New packages in module. Scatter/gather
	* multiop.test: operations, multi-file operations.
	* multiop.man: First user of 'wip' code.
	* multi.tcl:
	* pkgIndex.tcl:

2007-07-27  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl: Fixed problems of 'relative' and 'relativeUrl'
	* fileutil.man: with paths containing . and .., i.e. like
	* fileutil.test: '/foo/bar/../common'. Done by making the paths
	* pkgIndex.man: absolute and then using LexNormalize to remove
	  them. Added a fast path to LexNormalize to quickly return for
	  paths not containing . nor .. Also fixed bug in handling .. with
	  short relative paths. Extended the testsuite. Package bumped to
	  version 1.13.1 (patchlevel, bugfixes only).
