@@ -9,7 +9,7 @@
 # Copyright (c) 2005-2007 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: fileutil.test,v 1.54 2007/08/03 23:07:25 andreas_kupries Exp $
+# RCS: @(#) $Id: fileutil.test,v 1.55 2007/08/04 00:58:27 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -30,30 +30,46 @@ testing {
 
 # -------------------------------------------------------------------------
 
-set dir $::tcltest::temporaryDirectory
+proc gt_setup {} {
+    global tcl_platform gt gtfa gtfb
+
+    set gt   [makeDirectory grepTest]
+    set gtfa [makeFile "zoop" [file join $gt {file [1]}]]
+    set gtfb {}
+
+    if {[string equal $::tcl_platform(platform) windows]} return
+
+    set gtfb [makeFile "zoo\nbart" [file join $gt {file* 2}]]
+    return
+}
+
+proc gt_cleanup {} {
+    removeDirectory grepTest
+
+
+    rename gt_setup   {}
+    rename gt_cleanup {}
+    unset  ::gt ::gtfa ::gtfb
+    return
+}
 
 # -------------------------------------------------------------------------
 
-# Build a sample tree to search
-makeDirectory grepTest
-makeFile "zoop" [file join $dir grepTest {file [1]}]
-if {0 != [string compare $::tcl_platform(platform) windows]} {
-    makeFile "zoo\nbart"  [file join $dir grepTest {file* 2}]
-}
-
+gt_setup
 
 test grep-1.1 {normal grep} {macOrUnix} {
-    lsort [fileutil::grep "zoo" [glob [file join $dir grepTest *]]]
-} [list "[file join $dir grepTest {file [1]}]:1:zoop" \
-	"[file join $dir grepTest {file* 2}]:1:zoo"]
+    lsort [fileutil::grep "zoo" [glob [file join $gt *]]]
+} [list "$gtfa:1:zoop" "$gtfb:1:zoo"]
 
 test grep-1.2 {more restrictive grep} {
-    lsort [fileutil::grep "zoo." [glob [file join $dir grepTest *]]]
-} [list "[file join $dir grepTest {file [1]}]:1:zoop"]
+    lsort [fileutil::grep "zoo." [glob [file join $gt *]]]
+} [list "$gtfa:1:zoop"]
 
 test grep-1.3 {more restrictive grep} {macOrUnix} {
-    lsort [fileutil::grep "bar" [glob [file join $dir grepTest *]]]
-} [list "[file join $dir grepTest {file* 2}]:2:bart"]
+    lsort [fileutil::grep "bar" [glob [file join $gt *]]]
+} [list "$gtfb:2:bart"]
+
+gt_cleanup
 
 # -------------------------------------------------------------------------
 
@@ -69,32 +85,53 @@ test foreachline-1.0 {foreachLine} {
     set res
 } {/foo/bar/baz}
 
+# -------------------------------------------------------------------------
 
-makeDirectory touchTest
-makeFile "blah" [file join touchTest {file [1]}]
+proc t_setup {} {
+    global tt
+
+    set tt [makeDirectory touchTest]
+    makeFile "blah" [file join touchTest {file [1]}]
+}
+
+proc t_cleanup {} {
+    removeDirectory touchTest
+    rename t_setup   {}
+    rename t_cleanup {}
+    unset ::tt
+    catch { unset ::a1 }
+    catch { unset ::m1}
+    catch { unset ::a2}
+    catch { unset ::m2}
+    catch { unset ::f}
+    catch { unset ::r}
+    return
+}
+
+# -------------------------------------------------------------------------
+
+t_setup
 
 test touch-1.1 {create file} tcl8.3plus {
-    set f [file join $dir touchTest here]
+    set f [file join $tt here]
     fileutil::touch $f
-    # reap this file on cleanup
-    lappend ::tcltest::filesmade $f
     file exists $f
 } 1
 
 test touch-1.2 {'-c' prevents file creation} tcl8.3plus {
-    set f [file join $dir touchTest nothere]
+    set f [file join $tt nothere]
     fileutil::touch -c $f
     file exists $f
 } 0
 
 test touch-1.3 {'-c' has no effect on existing files} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch -c $f
     file exists $f
 } 1
 
 test touch-1.4 {test relative times} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
@@ -103,10 +140,10 @@ test touch-1.4 {test relative times} tcl8.3plus {
     set a2 [file atime $f]
     set m2 [file mtime $f]
     list [expr {$a1 == $m1}] [expr {$a2 == $m2}] [expr {$a1 < $a2}] [expr {$m1 < $m2}]
-} [list 1 1 1 1]
+} {1 1 1 1}
 
 test touch-1.5 {test relative times using -a} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
@@ -115,10 +152,10 @@ test touch-1.5 {test relative times using -a} tcl8.3plus {
     set a2 [file atime $f]
     set m2 [file mtime $f]
     list [expr {$a1 == $m1}] [expr {$a2 == $m2}] [expr {$a1 < $a2}] [expr {$m1 < $m2}]
-} [list 1 0 1 0]
+} {1 0 1 0}
 
 test touch-1.6 {test relative times using -m} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
@@ -127,10 +164,10 @@ test touch-1.6 {test relative times using -m} tcl8.3plus {
     set a2 [file atime $f]
     set m2 [file mtime $f]
     list [expr {$a1 == $m1}] [expr {$a2 == $m2}] [expr {$a1 < $a2}] [expr {$m1 < $m2}]
-} [list 1 0 0 1]
+} {1 0 0 1}
 
 test touch-1.7 {test relative times using -a and -m} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
@@ -139,20 +176,20 @@ test touch-1.7 {test relative times using -a and -m} tcl8.3plus {
     set a2 [file atime $f]
     set m2 [file mtime $f]
     list [expr {$a1 == $m1}] [expr {$a2 == $m2}] [expr {$a1 < $a2}] [expr {$m1 < $m2}]
-} [list 1 1 1 1]
+} {1 1 1 1}
 
 test touch-1.8 {test -t} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     after 1001
     fileutil::touch -t 42 $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
     list [expr {$a1 == 42}] [expr {$m1 == 42}]
-} [list 1 1]
+} {1 1}
 
 test touch-1.9 {test -t with -a} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     after 1001
     fileutil::touch -t 42 -a $f
@@ -162,7 +199,7 @@ test touch-1.9 {test -t with -a} tcl8.3plus {
 } [list 1 0]
 
 test touch-1.10 {test -t with -m} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     after 1001
     fileutil::touch -t 42 -m $f
@@ -172,72 +209,75 @@ test touch-1.10 {test -t with -m} tcl8.3plus {
 } [list 0 1]
 
 test touch-1.11 {test -t with -a and -m} tcl8.3plus {
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     after 1001
     fileutil::touch -t 42 -a -m $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
     list [expr {$a1 == 42}] [expr {$m1 == 42}]
-} [list 1 1]
+} {1 1}
 
 test touch-1.12 {test -r} tcl8.3plus {
     set r [info script]
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     after 1001
     fileutil::touch -r $r $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
     list [expr {$a1 == [file atime $r]}] [expr {$m1 == [file mtime $r]}]
-} [list 1 1]
+} {1 1}
 
 test touch-1.13 {test -r with -a} tcl8.3plus {
     set r [info script]
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     after 1001
     fileutil::touch -r $r -a $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
     list [expr {$a1 == [file atime $r]}] [expr {$m1 == [file mtime $r]}]
-} [list 1 0]
+} {1 0}
 
 test touch-1.14 {test -r with -m} tcl8.3plus {
     set r [info script]
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     after 1001
     fileutil::touch -r $r -m $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
     list [expr {$a1 == [file atime $r]}] [expr {$m1 == [file mtime $r]}]
-} [list 0 1]
+} {0 1}
 
 test touch-1.15 {test -r with -a and -m} tcl8.3plus {
     set r [info script]
-    set f [file join $dir touchTest {file [1]}]
+    set f [file join $tt {file [1]}]
     fileutil::touch $f
     after 1001
     fileutil::touch -r $r -m -a $f
     set a1 [file atime $f]
     set m1 [file mtime $f]
     list [expr {$a1 == [file atime $r]}] [expr {$m1 == [file mtime $r]}]
-} [list 1 1]
+} {1 1}
 
+t_cleanup
 
 # ----------------------------------------------------------------
 
-# install --------------------------------------------------------
+proc i_setup {} {
+    global tcl_platform
+    makeDirectory installDst
+    makeDirectory installSrc
 
-makeDirectory installDst
-makeDirectory installSrc
-makeDirectory [file join installSrc subdir]
-makeFile "blah" [file join installSrc {file [1]}]
+    makeDirectory   [file join installSrc subdir]
+    makeFile "blah" [file join installSrc {file [1]}]
 
-# Make a second subdirectory to install.
-if { $tcl_platform(platform) == "unix" } {
-    makeDirectory [file join installSrc subdir2]
+    # Make a second subdirectory to install, unix-only
+    if {$tcl_platform(platform) != "unix" } return
+
+    makeDirectory   [file join installSrc subdir2]
     makeFile "blah" [file join installSrc subdir subfile1]
     makeFile "blah" [file join installSrc subdir subfile2]
     makeFile "blah" [file join installSrc subdir subfile3]
@@ -245,21 +285,36 @@ if { $tcl_platform(platform) == "unix" } {
     foreach fl {1 2 3} {
 	set fn [file join installSrc subdir2 subfile$fl]
 	makeFile "blah" $fn
-
+	    
 	# Give it some "bad" permissions.
 	file attributes $fn -permissions 0600
     }
+    return
 }
+
+proc i_cleanup {} {
+    removeDirectory installDst
+    removeDirectory installSrc
+
+    rename i_setup   {}
+    rename i_cleanup {}
+    return
+}
+
+# ----------------------------------------------------------------
+
+i_setup
 
 test install-1.1 {install a file} {
     fileutil::install [file join installSrc {file [1]}] installDst
-    file exists [file join installDst {file [1]}]
+    file exists       [file join installDst {file [1]}]
 } {1}
 
 makeDirectory installDst
+
 test install-2.1 {install a directory} {tcl8.4plus} {
     list [catch {
-        fileutil::install [file join installSrc subdir] installDst
+        fileutil::install                         [file join installSrc subdir] installDst
         set result [lsort [glob -tails -directory [file join installDst subdir] [file join . / *]]]
         file delete -force installDst
         set result
@@ -267,9 +322,10 @@ test install-2.1 {install a directory} {tcl8.4plus} {
 } {0 {subfile1 subfile2 subfile3}}
 
 makeDirectory installDst
+
 test install-2.2 {install a directory} {tcl8.3plus} {
     list [catch {
-        fileutil::install [file join installSrc subdir] installDst
+        fileutil::install                  [file join installSrc subdir] installDst
         set result [lsort [glob -directory [file join installDst subdir] [file join . / *]]]
         file delete -force installDst
         set result
@@ -277,6 +333,7 @@ test install-2.2 {install a directory} {tcl8.3plus} {
 } {0 {installDst/subdir/subfile1 installDst/subdir/subfile2 installDst/subdir/subfile3}}
 
 makeDirectory installDst
+
 test install-3.1 {install a directory, set permissions} {unix tcl8.3plus} {
     set res {}
     fileutil::install -m go+rw [file join installSrc subdir2] installDst
@@ -286,13 +343,41 @@ test install-3.1 {install a directory, set permissions} {unix tcl8.3plus} {
     set res
 } {006660066600666}
 
+i_cleanup
+
 # -------------------------------------------------------------------------
+
+proc tmp_setup {} {
+    global xpath
+
+    # Set up an exclusive directory to search. This cannot be unset,
+    # hence the location of these tests after the regular
+    # tempdir/tempfile tests.
+
+    removeDirectory x
+    set xpath [makeDirectory x]
+    removeDirectory x
+    return
+}
+
+proc tmp_cleanup {} {
+    rename tmp_setup {}
+    rename tmp_cleanup {}
+    removeDirectory x
+    unset ::xpath
+    unset ::res
+    return
+}
+
+# -------------------------------------------------------------------------
+
+tmp_setup
 
 test tempdir-1.1 {return the correct directorary for temporary files} {unix} {
     set ::env(TMPDIR) [pwd] ;# Most high-priority source, and existing directory!
-    set result [::fileutil::tempdir]
+    set res [::fileutil::tempdir]
     unset ::env(TMPDIR)
-    set result
+    set res
 } [pwd]
 
 test tempdir-1.2 {return the correct directorary for temporary files} {unix} {
@@ -305,16 +390,18 @@ test tempdir-1.2 {return the correct directorary for temporary files} {unix} {
 
 test tempfile-1.1 {generate temporary file name and file} {
     set filename [::fileutil::tempfile]
-    set result [file exists $filename]
+    set res [file exists $filename]
     file delete $filename
-    set result
+    unset filename
+    set res
 } {1}
 
 test tempfile-1.2 {generate writable temporary file name} {
     set filename [::fileutil::tempfile]
-    set result [file writable $filename]
+    set res [file writable $filename]
     file delete $filename
-    set result
+    unset filename
+    set res
 } {1}
 
 test tempfile-1.3 {generate 100 unique temporary filenames} {
@@ -328,32 +415,23 @@ test tempfile-1.3 {generate 100 unique temporary filenames} {
     set i
 } {100}
 
-# -------------------------------------------------------------------------
-# Set an exclusive directory to search. This cannot be unset, hence
-# the location of these tests after the regular tempdir/tempfile
-# tests.
-
-removeDirectory x
-set xpath [makeDirectory x]
-removeDirectory x
-
 test tempdir-1.3 {tempdir, user-specified, bad} {
     catch {::fileutil::tempdir x y} msg
     set msg
 } {wrong#args: should be "::fileutil::tempdir ?path?"}
 
 test tempdir-1.4 {tempdir, user-specified, bad} {
-    set path [makeDirectory x]
+    ::fileutil::tempdir [makeDirectory x]
     removeDirectory x
-    ::fileutil::tempdir $path
 
     catch {::fileutil::tempdir} msg
+    removeDirectory x
+
     lindex [split $msg \n] 0 ; # First line only.
 } {Unable to determine a proper directory for temporary files}
 
 test tempdir-1.5 {tempdir, user-specified, ok} {
-    set path [makeDirectory x]
-    ::fileutil::tempdir $path
+    ::fileutil::tempdir [makeDirectory x]
 
     set res [::fileutil::tempdir]
     removeDirectory x
@@ -361,19 +439,18 @@ test tempdir-1.5 {tempdir, user-specified, ok} {
 } $xpath
 
 test tempfile-1.4 {temp file in user specified directory} {
-    set path [makeDirectory x]
-    ::fileutil::tempdir $path
+    ::fileutil::tempdir [makeDirectory x]
 
     set          filename [::fileutil::tempfile TEST]
     file delete $filename
 
     removeDirectory x
-    string match $path/TEST* $filename
+    string match $xpath/TEST* $filename
 } 1
+
+tmp_cleanup
 
 # -------------------------------------------------------------------------
 
-unset dir
-unset xpath
 testsuiteCleanup
 return
